     * -m,--multi-row Enables support for platforms that allow multiple
       rows to be specified in a single insert statement.
* Added -n (--repeat) option to \eval allowing the batch of SQL being
  evaluated to be run multiple times.  Each iteration of evaluation
  will have a variable ${iteration} set that it can refer to if it
  wants to vary the SQL behavior by iteration.
* Added "isql" display style, that attempts to format data in a fashion
  similar to Sybase's isql program.
* Added "vertical" (or "vert") display style, that attempts to format 
  in a rotated "name: value" style.
* Added documentation for the ${rc} variable. This variable contains
  the return code from the most recently executed jsqsh command, which
  will be 0 for success or non-zero for failure.  For example. the 
  \go command returns a non-zero value if the SQL executed failed.
* Added ${fail_count} variable that contains the total number of
  commands that have been executed within the session that have failed
  (i.e. ${rc} from the command was non-zero).
* Jsqsh will now exit with a value indicating the total number of failed
  commands (which is the sum total of ${fail_count} from each session
  that was created within jsqsh). 
* Added ${binstr_fmt}, a boolean variable, that controls whether or 
  not binary values are displayed as raw binary values (false=0xabcd) 
  or as binary string values (true=X'abcd').
* Added ${exec_mode} variable that can change the manner in which 
  jsqsh executes SQL against the remote server. This can be one of
  "immediate" (the default) or "prepare".
* Added driver name 'db2zos'. This is identical to the "db2" driver
  except that it sets the "emulateParameterMetaDataForZCalls" property
  and sets the execution mode to "prepare" upon connection (DB2 z/OS
  can execute "call procname()" calls if the SQL is prepared first).
* Added <SessionVariable> property in the drivers.xml that allows a 